--- a/pacific.css
+++ b/pacific.css
@@ -1,14 +1,91 @@
-body { background-color: #FFFFFF; 
-       color: #666666;}
-
-header {background-color: #000033; color: #FFFFFF}
-
-nav {background-color: #90C7E3; color: #FFFFFF;}
-
-h2 {color: #3399CC;}
-
-dt {color: #000033;}
-
-.resort {color: #5C7FA3;}
-
-h1 { margin-bottom: 0;}
+body {
+    background-color: #90C7E3;
+    color: #666666;
+    background-image: linear-gradient(#FFFFFF, #90C7E3);
+    background-repeat: no-repeat;
+    font-family: sans-serif;
+}
+header {
+    background-color: #000033;
+    color: #FFFFFF;
+    height: 60px;
+    padding-top: 15px;
+    text-align: center;
+    background-image: url(images/sunset.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+}
+nav {
+    background-color: #FFFFFF;
+    color: #FFFFFF;
+    text-align: center;
+    padding-top: 10px;
+    font-weight: bold;
+}
+nav a {
+    text-decoration: none
+}
+h2 {
+    color: #3399CC;
+    text-shadow: 1px 1px 1px #CCCCCC
+}
+h3 {
+    color: #000033;
+    font-family: Georgia, Times New Roman, serif;
+}
+.resort {
+    color: #5C7FA3;
+    font-weight: bold;
+}
+ul {
+    list-style-image: url(images/marker.gif);
+}
+#contact {
+    font-size: 90%;
+}
+h1 {
+    margin-bottom: 0;
+    margin-top: 0;
+    font-family: Georgia, Times New Roman, serif;
+}
+#wrapper {
+    margin-left: auto;
+    margin-right: auto;
+    width: 80%;
+    background-color: #FFFFFF;
+    min-width: 960px;
+    max-width: 2048px;
+    box-shadow: 3px 3px 3px #333333;
+}
+main {
+    padding-top: 1px;
+    padding-right: 20px;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    display: block;
+}
+footer {
+    padding: 20px;
+    font-size: 75%;
+    font-style: italic;
+    text-align: center;
+    font-family: Georgia, Times New Roman, serif;
+}
+#homehero {
+    height: 300px;
+    background-image: url(images/coasthero.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+#yurthero {
+    height: 300px;
+    background-image: url(images/yurthero.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
+#trailhero {
+    height: 300px;
+    background-image: url(images/trailhero.jpg);
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
+}
