--- a/ch7pacific/pacific.css
+++ b/ch7pacific/pacific.css
@@ -1,7 +1,7 @@
 body {
-    background-color: #4F6D93;
+    background-color: #90C7E3;
     color: #666666;
-    background-image: linear-gradient(#FFFFFF, #4F6D93);
+    background-image: linear-gradient(#FFFFFF, #90C7E3);
     background-repeat: no-repeat;
     font-family: Arial, Helvetica, sans-serif;
 }
@@ -16,23 +16,14 @@ header {
     background-repeat: no-repeat;
 }
 nav {
+    background-color: #FFFFFF;
     color: #FFFFFF;
-    padding: 20px;
+    text-align: center;
+    padding: 10px;
     font-weight: bold;
-    float: left;
-    width: 160px;
 }
 nav a {
     text-decoration: none
-}
-nav a:link {
-    color: #000033;
-}
-nav a:visited {
-    color: #344873;
-}
-nav a:hover {
-    color: #FFFFFF;
 }
 h2 {
     color: #3399CC;
@@ -46,7 +37,7 @@ h3 {
     color: #5C7FA3;
     font-weight: bold;
 }
-main ul {
+ul {
     list-style-image: url(images/marker.gif);
 }
 #contact {
@@ -57,57 +48,44 @@ h1 {
     margin-top: 0;
     font-family: Georgia, Times New Roman, serif;
 }
-nav ul {
-    list-style-type: none;
-    margin: 0;
-    padding-left: 0;
-    font-size: 1.2em;
-}
 #wrapper {
     margin-left: auto;
     margin-right: auto;
     width: 80%;
-    background-color: #90C7E3;
+    background-color: #FFFFFF;
     min-width: 960px;
     max-width: 2048px;
     box-shadow: 3px 3px 3px #333333;
 }
 main {
-    background-color: #FFFFFF;
     padding-top: 1px;
     padding-right: 20px;
     padding-bottom: 20px;
-    padding-left: 30px;
-    margin-left: 190px;
+    padding-left: 20px;
     display: block;
 }
 footer {
-    background-color: #FFFFFF;
     padding: 20px;
     font-size: 75%;
     font-style: italic;
     text-align: center;
-    margin-left: 190px;
-    font-family: Georgia, "Times New Roman", serif;
+    font-family: Georgia, "Times New Roman"", serif;
 }
 #homehero {
     height: 300px;
     background-image: url(images/coasthero.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    margin-left: 190px;
 }
 #yurthero {
     height: 300px;
     background-image: url(images/yurthero.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    margin-left: 190px;
 }
 #trailhero {
     height: 300px;
     background-image: url(images/trailhero.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
-    margin-left: 190px;
 }
