Changes for testing chapter 8

--- a/pacific.css
+++ b/pacific.css
@@ -1,3 +1,124 @@
+
+header, main, nav, footer, figure, figcaption, aside, section, article {display:block}
+
+#mobile {
+    display:none;
+}
+
+#desktop {display:inline}
+
+@media only screen and (max-width: 64em) {
+  
+    body {
+        margin: 0;
+        background-color: #FFFFFF;        
+    }
+    
+    #wrapper {
+        min-width: 0;
+        width: auto;
+        box-shadow: none;
+    }
+    
+    main {
+        margin-left: 0;
+    }
+    
+    nav {
+        float:none;
+        width:auto;
+        text-align: center;
+        padding: 0.5em;
+    }
+    
+    nav li {
+        display: inline;
+        padding-top: 0.25em;
+        padding-bottom: 0.25em;
+        padding-left: 0.75em;
+        padding-right: 0.75em;
+    }
+    
+    #homehero {
+        margin-left: 0;
+        height: 200px;
+    }
+    
+        #yurthero {
+        margin-left: 0;
+        height: 200px;
+    }
+    
+        #trailhero {
+        margin-left: 0;
+        height: 200px;
+    }
+    
+    footer {
+        margin-left: 0;
+    }
+    
+}
+
+@media only screen and (max-width: 37.5em) {
+    header {
+        padding-top: 1em;
+    }
+    
+    main {
+        padding-top: 0.1em;
+        padding-bottom: 0.1em;
+        padding-left: 1em;
+        padding-right: 1em;
+        font-size: 90%;
+    }
+    
+    h1 {
+        font-size: 1.5em;
+    }
+    
+    nav {
+        padding: 0;
+    }
+    
+    nav li {
+        display: block;
+    }
+    
+    nav a {
+        display: block;
+    }
+    
+    #homehero {
+        background-image: none;
+        height: 0;
+    }
+    
+        #yurthero {
+        background-image: none;
+        height: 0;
+    }
+    
+        #trailhero {
+        background-image: none;
+        height: 0;
+    }
+    
+    #mobile {
+        display: inline;
+    }
+    
+    #desktop {
+        display: none;
+    }
+    
+    
+}
+
+
+
+
+
 body {
     background-color: #4F6D93;
     color: #666666;
@@ -36,7 +157,8 @@ nav a:hover {
 }
 h2 {
     color: #3399CC;
-    text-shadow: 1px 1px 1px #CCCCCC
+    text-shadow: 1px 1px 1px #CCCCCC;
+    font-family: Georgia, "Times New Roman", serif;
 }
 h3 {
     color: #000033;
