--- a/pacific.css
+++ b/pacific.css
@@ -1,5 +1,5 @@
 
-header, main, nav, footer, figure, figcaption, aside, section, article {display:block}
+header, main, nav, footer, figure, figcaption, aside, section, article {display:block;}
 
 #mobile {
     display:none;
