--- a/pacific.css
+++ b/pacific.css
@@ -1,5 +1,3 @@
-
-
 body {
     background-color: #4F6D93;
     color: #666666;
@@ -114,39 +112,61 @@ footer {
     background-repeat: no-repeat;
     margin-left: 190px;
 }
-
-header, main, nav, footer, figure, figcaption, aside, section, article {display:block;}
-
-#mobile {
-    display:none;
+table {
+    border: 1px solid #3399CC;
+    width: 80%;
+    border-spacing: 0;
 }
-
-#desktop {display:inline}
-
+td,
+th {
+    padding: 5px;
+    border: 1px solid #3399CC;
+}
+td {
+    text-align: center;
+}
+.text {
+    text-align: left;
+}
+tr:nth-of-type(odd) {
+    background-color: #F5FAFC;
+}
+header,
+main,
+nav,
+footer,
+figure,
+figcaption,
+aside,
+section,
+article {
+    display: block;
+}
+#mobile {
+    display: none;
+}
+#desktop {
+    display: inline
+}
 @media only screen and (max-width: 64em) {
-  
     body {
         margin: 0;
-        background-color: #FFFFFF;        
+        background-color: #FFFFFF;
     }
-    
     #wrapper {
         min-width: 0;
         width: auto;
         box-shadow: none;
     }
-    
     main {
         margin-left: 0;
     }
-    
     nav {
-        float:none;
-        width:auto;
+        float: none;
+        width: auto;
         text-align: center;
         padding: 0.5em;
     }
-    
     nav li {
         display: inline;
         padding-top: 0.25em;
@@ -154,33 +174,26 @@ header, main, nav, footer, figure, figcaption, aside, section, article {display:
         padding-left: 0.75em;
         padding-right: 0.75em;
     }
-    
     #homehero {
         margin-left: 0;
         height: 200px;
     }
-    
-        #yurthero {
+    #yurthero {
         margin-left: 0;
         height: 200px;
     }
-    
-        #trailhero {
+    #trailhero {
         margin-left: 0;
         height: 200px;
     }
-    
     footer {
         margin-left: 0;
     }
-    
 }
-
 @media only screen and (max-width: 37.5em) {
     header {
         padding-top: 1em;
     }
-    
     main {
         padding-top: 0.1em;
         padding-bottom: 0.1em;
@@ -188,45 +201,34 @@ header, main, nav, footer, figure, figcaption, aside, section, article {display:
         padding-right: 1em;
         font-size: 90%;
     }
-    
     h1 {
         font-size: 1.5em;
     }
-    
     nav {
         padding: 0;
     }
-    
     nav li {
         display: block;
     }
-    
     nav a {
         display: block;
     }
-    
     #homehero {
         background-image: none;
         height: 0;
     }
-    
-        #yurthero {
+    #yurthero {
         background-image: none;
         height: 0;
     }
-    
-        #trailhero {
+    #trailhero {
         background-image: none;
         height: 0;
     }
-    
     #mobile {
         display: inline;
     }
-    
     #desktop {
         display: none;
     }
-    
-    
 }
